﻿[b]Nome MOD:[/b] XirCookie Enhance Mod
[b]Autore[/b]: Sir Xiradorn
[b]Versione Mod[/b]: 0.30.10 - Beta
[b]Data[/b]: 04/07/2015
[b]Versioni phpBB compatibili[/b]: 3.0.x

[b]Descrizione MOD:[/b] Rendiamo il nostro forum a norma di legge creando un pre-portale di accoglienza per gli utenti con tutte le informazioni di cui hai bisogno. Il cookie sono a prova di dispositivo e non richiede JavaScript quindi anche sui browser più datati può essere visualizzato il tutto. Fornisce anche alcune funzioni aggiuntive e auto traduzione nelle lingue più disparate.

[b]Link Mod:[/b] --
[b]Demo:[/b] [url=http://stargate.xiradorn.it/30x/]XirCookie Enhance Mod -> Stargate - XiLab[/url] 
[b]Repository:[/b] --

[b]ALPHA - Changelog v 0.0.0 / 0.4.0:[/b]
[list]
[*]01/06/2015 - Dev - Inizio 
[*]03/06/2015 - Dev - Terminazione sviluppo codice funzionale e stile di base
[*]07/06/2015 -
[list]
[*]Dev - Inizio 'improve' per lo stile e le funzioni aggiuntive.
[*]Dev - Rifinitura della parte responsive - fissata da dispositivi minimi a 640px.
[*]Dev - Passaggio da Alpha a Dev[/list][/list]

[b]DEV - Changelog v 0.4.0 / 0.30.10:[/b]
[list]
[*]13/06/2015 - Fix - Ripulitura codice da errori di varia natura
[*]16/06/2015 -
[list][*]Dev - Creazione e definizione funzione di auto traduzione tramite user-agent
[*]Dev - Creazione file di traduzione it e en
[*]Dev - Creazione funzione alternativa per localizzazione linguaggio[/list]
[*]17/06/2015 - 
[list][*]Pwr - Perfezionamento funzioni create e riposizionamento file
[*]Dev - Creazione e perfezionamento localizzazione in forzamento
[*]Fix/Add - Controlli, fix e aggiunta immagini mancanti[/list]
[*]18/06/2015 - Add - supporto per le seguenti lingue: Italiano, Inglese, Francese, Tedesco, Spagnolo, Greco, Russo, Cinese, Giapponese*
[*]19/06/2015 - 
[list][*]Pwr - Aggiunto un doppio riconoscimento per la lingua del browser e quella scelta dalla form tramite classe css. Se queste coincidono, predominerà la classe della lingua del browser