@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ChangeLog XirCookie Enhance Mod - BETA - 0.30.10 to 1.0.0</title>
+	<title>ChangeLog XirCookie Enhance Mod - 1.0.0</title>
 	<link rel="stylesheet" media="all" href="assets/normalize.css">
 	<style type="text/css">
 		html {
@@ -28,8 +28,8 @@
 	<div class="content">
 		<span style="font-weight: bold">Nome MOD:</span> XirCookie Enhance Mod<br>
 		<span style="font-weight: bold">Autore</span>: Sir Xiradorn<br>
-		<span style="font-weight: bold">Versione Mod</span>: 0.30.10 - Beta<br>
-		<span style="font-weight: bold">Data</span>: 04/07/2015<br>
+		<span style="font-weight: bold">Versione Mod</span>: 1.0.0<br>
+		<span style="font-weight: bold">Data</span>: 16/07/2015<br>
 		<span style="font-weight: bold">Versioni phpBB compatibili</span>: 3.0.x<br>
 		<br>
 		<span style="font-weight: bold">Descrizione MOD:</span> Rendiamo il nostro forum a norma di legge creando un pre-portale di accoglienza per gli utenti con tutte le informazioni di cui hai bisogno. Il cookie sono a prova di dispositivo e non richiede JavaScript quindi anche sui browser più datati può essere visualizzato il tutto. Fornisce anche alcune funzioni aggiuntive e auto traduzione nelle lingue più disparate.<br>
@@ -136,6 +136,12 @@
 		<br>
 		<ul>
 			<li>04/07/2015 - Passaggio in versione beta</li>
+		</ul>
+		<br>
+		<span style="font-weight: bold">Versione 1.0.0:</span>
+		<br>
+		<ul>
+			<li>16/07/2015 - Passaggio in versione Ufficiale</li>
 		</ul>
 		<br>* La lingua dei file in questione non ha nulla a che vedere con quella del forum. Sul forum potete avere anche solo l'italiano e usare invece per la mod tutte le lingue elencate prima e/o crearne voi delle altre<br>* La mia legenda personale prevede i seguenti tag. Inoltre questo influirà sul numero di versione:<br>- Dev - ovvero quando vine sviluppata una funzione Ex novo<br>- Pwr - potenziamento di funzioni attuali<br>- Add - aggiunta di parti e componenti<br>- Up - aggiornamento dei file preesistenti<br>- Fix - risoluzione problemi<br>Sono previste anche combinazione dei suddetti tag. Il numero di versione è strutturato come x.y.z.<br>- x - versione generale. Verrà incrementato se cambiano 5 o più funzioni insieme o se si totalizzeranno 99 modifiche<br>- y - ogni modifica, aggiunta, e powering segnano un incremento<br>- z - rappresenta il numero di fix sulla versione corrente x <br>
 		<br>
