@@ -28,7 +28,7 @@ Tiny Version - Minified code]]></description>
 				<homepage><![CDATA[http://xiradorn.it]]></homepage>
 			</author>
 		</author-group>
-		<mod-version>0.30.10</mod-version>
+		<mod-version>1.0.0</mod-version>
 		<installation>
 			<level>intermediate</level>
 			<time>1200</time>
